update index.html and more

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- 定义加载时候的动作 -->
     <div id="app">加载中,若长时间无响应请刷新或重启</div>
     <script>
-         /*if (typeof navigator.serviceWorker !== 'undefined') {
+         if (typeof navigator.serviceWorker !== 'undefined') {
     navigator.serviceWorker.register('sw.js')
-  }*/
+  }
         window.$docsify = {
             // 项目名称
             name: '直播法律助手',
