--- a/wcnts.html
+++ b/wcnts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>特效文字显示</title>
+    <title>未成年提示</title>
     <style>
         /* 普通配色 */
         .normal {
@@ -21,7 +21,7 @@
 
         /* 可爱字体+马卡龙配色 */
         .cute {
-            font-family: 'Arial Black', cursive;
+            font-family: 'Arial Black', sans-serif;
             font-size: 50px;
             color: #ff80ed;
             animation: glowing 2s infinite;
