--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Maicarons临时公开文档停靠处 -->
-<html lang="en">
+<!-- 直播法律助手 -->
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
