--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     repoId: "R_kgDOJwQFHg",
                     category: "General",
                     categoryId: "DIC_kwDOJwQFHs4CXQe-",
-                    mapping: "url",
+                    mapping: "pathname",
                     reactionsEnabled: "0",
                     strict: "1",
                     emitMetadata: "0",
