--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
             // 封面支持，默认加载的是项目根目录下的_coverpage.md文件
             coverpage: true,
             // 最大支持渲染的标题层级
-            maxLevel: 5,
+            maxLevel: 10,
             // 自定义侧边栏后默认不会再生成目录，设置生成目录的最大层级（建议配置为2-4）
-            subMaxLevel: 4,
+            subMaxLevel: 10,
             // 小屏设备下合并导航栏到侧边栏
             mergeNavbar: true,
             busuanzi: true,
+            relativePath: true,
+            auto2top: true,
+
             /*搜索相关设置*/
 
             search: {
@@ -52,6 +55,21 @@
                 hideOtherSidebarContent: false,
                 namespace: 'LiveLawHelper',
                 
+            },
+            pagination: {
+                previousText: '上一章节',
+                // or
+                nextText: {
+                '/en/': 'NEXT',
+                '/': '下一章节'
+                },
+                crossChapter: true,
+                crossChapterText: true,
+            },
+            progress: {
+                position: "top",
+                color: "var(--theme-color,#66ccff)",
+                height: "3px",
             },
             giscus:{
                     repo: "Maicarons/livelawhelper",
@@ -73,7 +91,33 @@
                     fontsize:'0.9em',
                     color:'rgb(90,90,90)',
                     language:'chinese'
-                }
+                },
+                ads: [
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638355965-480x300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638355965-480x300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638355799-480300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638268412-480x300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638268217-480x300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+            {
+            img: 'https://dn-lego-static.qbox.me/cps/1638267917-480x300.jpg',
+            href: 'https://s.qiniu.com/zMZnqy'
+            },
+        ]
         }
     </script>
     <!-- docsify的js依赖 -->
@@ -95,6 +139,15 @@
 <script src="https://cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 
 <script src="https://unpkg.com/docsify-count/dist/countable.js"></script>
+
+<script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/docsify-progress@latest/dist/progress.min.js"></script>
+
+
+
+<script src="https://unpkg.com/docsify-ads@1.0.4/dist/docsify-ads.min.js"></script>
+
 </body>
 
 </html>
